// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Activity: Table for student activities.
Course: Table for courses offered by the school.
CourseRequirement: Table for course prerequisites.
DegreeProgram: Table for degree programs offered by the school.
Department: Table for school departments.
DepartmentFaculty: Association table for department faculty assignments.
Teacher: Table for teacher information.
Enrollment: Junction table for student course enrollments.
Student: Table for student information.
ProgramCourse: Association table for courses required in degree programs.
StudentActivity: Junction table for student involvement in activities.
TeacherCourseAssignment: Association table for teacher course assignments.
'''
}

Table Activity {
    id INTEGER [primary key]
    name VARCHAR 
    is_service BOOLEAN 
    }

Table Course {
    id INTEGER [primary key]
    name VARCHAR 
    credit_hours INTEGER 
    is_graduate BOOLEAN 
    }

Table CourseRequirement {
    id INTEGER [primary key]
    course_id INTEGER 
    prerequisite_id INTEGER 
    }

Table DegreeProgram {
    id INTEGER [primary key]
    name VARCHAR 
    level VARCHAR 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    faculty_count INTEGER 
    }

Table DepartmentFaculty {
    id INTEGER [primary key]
    department_id INTEGER 
    teacher_id INTEGER 
    }

Table Teacher {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    hire_date DATE 
    }

Table Enrollment {
    id INTEGER [primary key]
    student_id INTEGER 
    course_id INTEGER 
    enrollment_date DATE 
    }

Table Student {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    enrollment_date DATE 
    service_activity_count INTEGER 
    is_honor_student BOOLEAN 
    }

Table ProgramCourse {
    id INTEGER [primary key]
    program_id INTEGER 
    course_id INTEGER 
    }

Table StudentActivity {
    id INTEGER [primary key]
    student_id INTEGER 
    activity_id INTEGER 
    }

Table TeacherCourseAssignment {
    id INTEGER [primary key]
    teacher_id INTEGER 
    course_id INTEGER 
    term VARCHAR 
    }



// Relationships
    Ref: CourseRequirement.(course_id) < Course.(id)
    Ref: CourseRequirement.(prerequisite_id) < Course.(id)
    Ref: DepartmentFaculty.(department_id) < Department.(id)
    Ref: DepartmentFaculty.(teacher_id) < Teacher.(id)
    Ref: Enrollment.(course_id) < Course.(id)
    Ref: Enrollment.(student_id) < Student.(id)
    Ref: ProgramCourse.(course_id) < Course.(id)
    Ref: ProgramCourse.(program_id) < DegreeProgram.(id)
    Ref: StudentActivity.(activity_id) < Activity.(id)
    Ref: StudentActivity.(student_id) < Student.(id)
    Ref: TeacherCourseAssignment.(course_id) < Course.(id)
    Ref: TeacherCourseAssignment.(teacher_id) < Teacher.(id)
